Leetcode 907 sum of sub-array minimums problem done